syntax="proto3";

option go_package = "./libs/auth;auth";

message TokenValidatorRequest {
  string bearer = 1;
}
message TokenValidatorResponse {
  string msg = 1;
  bool success = 2;
}


service Auth{
  rpc ValidateToken(TokenValidatorRequest) returns (TokenValidatorResponse) {}
}